--- a/src/Dashboards/activitydash.css
+++ b/src/Dashboards/activitydash.css
@@ -1,3 +1,299 @@
+@media only screen and (min-width: 1000px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(229, 229, 229, 0.22);
+  }
+  .activity-dash-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .activity-dash {
+    width: 60%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .activity-add-div {
+    display: flex;
+    width: 300px;
+    position: static;
+    margin-top: 200px; /* change to 200px */
+    align-items: center;
+    justify-content: flex-start;
+
+  }
+
+  .activity-dash h1 {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 35px;
+    color: #094A59;
+    margin-left: -200px;
+  }
+
+  .add-text {
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5c5d5e;
+    margin-left: 15px;
+    margin-bottom: 10px;
+  }
+  .add-text:hover {
+    cursor: pointer;
+    color: black;
+  }
+
+  .activity-add-button{
+    width: 25px;
+    height: 25px;
+    border: 1px solid #69C7BF;
+    border-radius: 50%;
+    box-sizing: border-box;
+    background-color: white;
+    color: #69C7BF;
+    font-size: 17px;
+    text-align: center;
+    margin-left: 50px;
+    margin-bottom: -1px;
+  }
+
+  .activity-add-button:hover {
+    background-color: #69C7BF;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: .5s;
+  }
+
+  .activity-results {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+    z-index: 3;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  .randomdiv {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 0px;
+    z-index: 3;
+  }
+  .bottom-div {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(229, 229, 229, 0.22);
+  }
+  .activity-dash-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .activity-dash {
+    width: 60%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .activity-add-div {
+    display: flex;
+    width: 300px;
+    position: static;
+    margin-top: 200px; /* change to 200px */
+    align-items: center;
+    justify-content: flex-start;
+
+  }
+
+  .activity-dash h1 {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 35px;
+    color: #094A59;
+    margin-left: -200px;
+  }
+
+  .add-text {
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5c5d5e;
+    margin-left: 15px;
+    margin-bottom: 10px;
+  }
+  .add-text:hover {
+    cursor: pointer;
+    color: black;
+  }
+
+  .activity-add-button{
+    width: 25px;
+    height: 25px;
+    border: 1px solid #69C7BF;
+    border-radius: 50%;
+    box-sizing: border-box;
+    background-color: white;
+    color: #69C7BF;
+    font-size: 17px;
+    text-align: center;
+    margin-left: 50px;
+    margin-bottom: -1px;
+  }
+
+  .activity-add-button:hover {
+    background-color: #69C7BF;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: .5s;
+  }
+
+  .activity-results {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-evenly;
+    z-index: 3;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  .randomdiv {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 0px;
+    z-index: 3;
+  }
+  .bottom-div {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(229, 229, 229, 0.22);
+  }
+  .activity-results {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-evenly;
+    z-index: -3;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  .activity-dash-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    z-index: -4;
+  }
+  .activity-dash {
+    width: 100%;
+    height: fit-content;
+    background-color: white;
+    z-index: -2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .activity-add-div {
+    display: flex;
+    width: 300px;
+    position: static;
+    margin-top: 200px; /* change to 200px */
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+
+  .activity-dash h1 {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 35px;
+    color: #094A59;
+  }
+  .add-text {
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5c5d5e;
+    z-index: 10;
+    margin-left: 8px;
+    margin-bottom: -6px;
+  }
+  .add-text:hover {
+    cursor: pointer;
+    color: black;
+  }
+
+  .activity-add-button{
+    width: 18px;
+    height: 18px;
+    border: 1px solid #69C7BF;
+    border-radius: 50%;
+    box-sizing: border-box;
+    background-color: white;
+    color: #69C7BF;
+    font-size: 14px;
+    padding-bottom: 2px;
+    padding-right: 0.5px;
+    margin-left: 25px;
+    z-index: 10;
+    margin-bottom: -6px;
+  }
+
+  .activity-add-button:hover {
+    background-color: #69C7BF;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: .5s;
+  }
+
+  .randomdiv {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 0px;
+    z-index: 3;
+  }
+
+  .bottom-div {
+    min-height: 55px;
+    width: 100%;
+    background-color: white;
+  }
+}
 
 @media only screen and (max-width: 600px) {
   body {
@@ -100,100 +396,3 @@
   }
 }
 
-@media only screen and (min-width: 601px) {
-  body {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(229, 229, 229, 0.22);
-  }
-  .activity-dash-container {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-    width: 100%;
-    justify-content: center;
-  }
-
-  .activity-dash {
-    width: 60%;
-    height: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .activity-add-div {
-    display: flex;
-    width: 300px;
-    position: static;
-    margin-top: 200px; /* change to 200px */
-    align-items: center;
-    justify-content: flex-start;
-
-  }
-
-  .activity-dash h1 {
-    font-weight: 600;
-    font-size: 30px;
-    line-height: 35px;
-    color: #094A59;
-    margin-left: -200px;
-  }
-
-  .add-text {
-    font-weight: 300;
-    font-size: 13px;
-    line-height: 15px;
-    color: #5c5d5e;
-    margin-left: 15px;
-    margin-bottom: 10px;
-  }
-  .add-text:hover {
-    cursor: pointer;
-    color: black;
-  }
-
-  .activity-add-button{
-    width: 25px;
-    height: 25px;
-    border: 1px solid #69C7BF;
-    border-radius: 50%;
-    box-sizing: border-box;
-    background-color: white;
-    color: #69C7BF;
-    font-size: 17px;
-    text-align: center;
-    margin-left: 50px;
-    margin-bottom: -1px;
-  }
-
-  .activity-add-button:hover {
-    background-color: #69C7BF;
-    color: #FFFFFF;
-    cursor: pointer;
-    transition: .5s;
-  }
-
-  .activity-results {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    width: 100%;
-    justify-content: space-evenly;
-    z-index: 3;
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
-
-  .randomdiv {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: 0px;
-    z-index: 3;
-  }
-  .bottom-div {
-    display: none;
-  }
-}
