--- a/src/Forms/movieform.css
+++ b/src/Forms/movieform.css
@@ -1,5 +1,232 @@
+@media only screen and (min-width: 1000px) {
+  .add-movie-modal {
+    position: absolute;
+    width: 500px;
+    height: 525px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top: 25%;
+    z-index: 3;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 50px 
+      rgba(0,0,0,0.2);
+    border-radius: 7px;
+  }
 
-@media only screen and (max-width: 599px) {
+  .addMovie-form {
+    display: flex;
+    position: absolute;
+    top: 3%;
+    flex-direction: column;
+    align-items: space-evenly;
+    justify-content: space-evenly;
+    height: 500px;
+    width: 450px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    z-index: 3;
+    padding-top: 10px;
+  }
+
+  .addMovie-form input {
+    width: 375px;
+    height: 45px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    padding: 2px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+  }
+
+  .addMovie-form textarea {
+    width: 375px;
+    height: 80px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+    padding-top: 8px;
+  }
+
+  .addMovie-form label {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    width: 150px;
+    height: 18px;
+    position: relative;
+    left: 50px;
+    margin-bottom: 0px;
+    margin-top: 3px;
+  }
+
+
+
+  .submitmovie-button {
+  width: 200px;
+  height: 50px;
+  background: #69C7BF;
+  box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
+  border-radius: 50px;
+  margin-left: 50%;
+  transform: translate(-50%);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 21px;
+  color: #FFFFFF;
+  margin-top: 10px;
+  transition: .5s;
+  }
+
+  .submitmovie-button:hover {
+    cursor: pointer;
+    background-color:rgb(82, 156, 150);
+    transition: 1s;
+  }
+
+  .cancel-movie {
+    color: #69C7BF;
+    text-align: center;
+    margin-left: 50%;
+    transform: translate(-50%);
+    margin-top: 10px;
+    transition: .3s;
+    margin-bottom: 0px;
+  }
+
+  .cancel-movie:hover {
+    cursor: pointer;
+    color: black;
+    transition: .5s;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .add-movie-modal {
+    position: absolute;
+    width: 500px;
+    height: 505px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top: 26%;
+    z-index: 3;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 50px 
+      rgba(0,0,0,0.2);
+    border-radius: 7px;
+  }
+
+  .addMovie-form {
+    display: flex;
+    position: absolute;
+    top: 3%;
+    flex-direction: column;
+    align-items: space-evenly;
+    justify-content: space-evenly;
+    height: 500px;
+    width: 450px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    z-index: 3;
+    padding-top: 10px;
+  }
+
+  .addMovie-form input {
+    width: 375px;
+    height: 45px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    padding: 2px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+  }
+
+  .addMovie-form textarea {
+    width: 375px;
+    height: 80px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+    padding-top: 8px;
+  }
+
+  .addMovie-form label {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    width: 150px;
+    height: 18px;
+    position: relative;
+    left: 50px;
+    margin-bottom: 0px;
+    margin-top: 3px;
+  }
+
+
+
+  .submitmovie-button {
+  width: 200px;
+  height: 50px;
+  background: #69C7BF;
+  box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
+  border-radius: 50px;
+  margin-left: 50%;
+  transform: translate(-50%);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 21px;
+  color: #FFFFFF;
+  margin-top: 10px;
+  transition: .5s;
+  }
+
+  .submitmovie-button:hover {
+    cursor: pointer;
+    background-color:rgb(82, 156, 150);
+    transition: 1s;
+  }
+
+  .cancel-movie {
+    color: #69C7BF;
+    text-align: center;
+    margin-left: 50%;
+    transform: translate(-50%);
+    margin-top: 5px;
+    transition: .3s;
+    margin-bottom: 15px;
+  }
+
+  .cancel-movie:hover {
+    cursor: pointer;
+    color: black;
+    transition: .5s;
+  }
+}
+
+@media only screen and (max-width: 768px) {
   .add-movie-modal {
     position: absolute;
     width: 340px;
@@ -110,16 +337,15 @@
     transition: .5s;
   }
 }
-
-@media only screen and (min-width: 1000px) {
+@media only screen and (max-width: 599px) {
   .add-movie-modal {
     position: absolute;
-    width: 500px;
-    height: 525px;
+    width: 340px;
+    height: 405px;
     left: 50%;
     transform: translate(-50%, 0%);
     top: 25%;
-    z-index: 3;
+    z-index: 5;
     background: #FFFFFF;
     box-shadow: 0px 0px 50px 
       rgba(0,0,0,0.2);
@@ -129,21 +355,21 @@
   .addMovie-form {
     display: flex;
     position: absolute;
-    top: 3%;
+    top: 0%;
     flex-direction: column;
     align-items: space-evenly;
     justify-content: space-evenly;
-    height: 500px;
-    width: 450px;
+    height: 405px;
+    width: 350px;
     left: 50%;
     transform: translate(-50%, 0%);
-    z-index: 3;
+    z-index: 5;
     padding-top: 10px;
   }
 
   .addMovie-form input {
-    width: 375px;
-    height: 45px;
+    width: 285px;
+    height: 30px;
     margin-left: 50%;
     transform: translate(-50%);
     padding: 2px;
@@ -157,8 +383,8 @@
   }
 
   .addMovie-form textarea {
-    width: 375px;
-    height: 80px;
+    width: 285px;
+    height: 40px;
     border: 1px solid #E5E5E5;
     border-radius: 6px;
     margin-left: 50%;
@@ -183,18 +409,16 @@
     margin-top: 3px;
   }
 
-
-
   .submitmovie-button {
-  width: 200px;
-  height: 50px;
+  width: 100px;
+  height: 30px;
   background: #69C7BF;
   box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
   border-radius: 50px;
   margin-left: 50%;
   transform: translate(-50%);
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
   line-height: 21px;
   color: #FFFFFF;
@@ -213,7 +437,7 @@
     text-align: center;
     margin-left: 50%;
     transform: translate(-50%);
-    margin-top: 10px;
+    margin-top: 0px;
     transition: .3s;
     margin-bottom: 0px;
   }
