--- a/src/settings.css
+++ b/src/settings.css
@@ -1,5 +1,280 @@
-@media only screen and (max-width: 599px) {
+@media only screen and (min-width: 1000px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+  }
 
+  .settings-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .main-settings {
+    background-color: white;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main-settings h1 {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 35px;
+    color: #094A59;
+    text-align: center;
+    margin-top: 200px;
+  }
+  .settings-instructions {
+    font-weight: 300;
+    font-size: 13px;
+    width: 300px;
+    text-align: center;
+  }
+
+  .settings-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-left: 50%;
+  }
+
+  .settings-form input {
+    background: #FFFFFF;
+    border: 1px solid #E5E5E5;
+    box-sizing: border-box;
+    border-radius: 6px;
+    width: 425px;
+    height: 45px;
+    padding: 10px;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+  }
+
+  .settings-form label {
+    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-left: 8px;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    color: #094A59;
+  }
+
+  .settings-submit-button {
+    background: #69C7BF;
+    border-radius: 50px;
+    width: 130px;
+    height: 35px;
+    font-size: 15px;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 40px;
+    color: white;
+    transition: .7s;
+  }
+
+  .settings-submit-button:hover {
+    background-color: rgb(84, 163, 157);
+    cursor: pointer;
+    transition: 1s;
+  }
+}
+
+/* @media only screen and (max-width: 1000px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+  }
+
+  .settings-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .main-settings {
+    background-color: white;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main-settings h1 {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 35px;
+    color: #094A59;
+    text-align: center;
+    margin-top: 200px;
+  }
+  .settings-instructions {
+    font-weight: 300;
+    font-size: 13px;
+    width: 300px;
+    text-align: center;
+  }
+
+  .settings-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-left: 50%;
+  }
+
+  .settings-form input {
+    background: #FFFFFF;
+    border: 1px solid #E5E5E5;
+    box-sizing: border-box;
+    border-radius: 6px;
+    width: 425px;
+    height: 45px;
+    padding: 10px;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+  }
+
+  .settings-form label {
+    margin-bottom: 10px;
+    margin-top: 30px;
+    margin-left: 8px;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    color: #094A59;
+  }
+
+  .settings-submit-button {
+    background: #69C7BF;
+    border-radius: 50px;
+    width: 130px;
+    height: 35px;
+    font-size: 15px;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 40px;
+    color: white;
+    transition: .7s;
+  }
+
+  .settings-submit-button:hover {
+    background-color: rgb(84, 163, 157);
+    cursor: pointer;
+    transition: 1s;
+  }
+} */
+
+@media only screen and (max-width: 1000px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+  }
+
+  .settings-container {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+  }
+  .main-settings {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main-settings h1 {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 35px;
+    color: #094A59;
+    margin-top: 190px;
+    margin-left: 20px;
+  }
+  .settings-instructions {
+    font-weight: 300;
+    font-size: 13px;
+    width: 300px;
+    text-align:center;
+    margin-top: 20px;
+  }
+
+  .settings-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .settings-form input {
+    background: #FFFFFF;
+    border: 1px solid #E5E5E5;
+    box-sizing: border-box;
+    border-radius: 6px;
+    width: 280px;
+    height: 45px;
+    margin-left: 0px;
+    padding: 10px;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+  }
+
+  .settings-form label {
+    /* margin-left: 5px; */
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    color: #094A59;
+  }
+
+  .settings-submit-button {
+    background: #69C7BF;
+    border-radius: 50px;
+    width: 130px;
+    height: 35px;
+    font-size: 15px;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 20px;
+    color: white;
+    transition: .7s;
+  }
+
+  .settings-submit-button:hover {
+    background-color: rgb(84, 163, 157);
+    cursor: pointer;
+    transition: 1s;
+  }
+}
+
+@media only screen and (max-width: 768px) {
   body {
     width: 100%;
     height: 100%;
@@ -90,8 +365,7 @@
     transition: 1s;
   }
 }
-
-@media only screen and (min-width: 1000px) {
+@media only screen and (max-width: 600px) {
 
   body {
     width: 100%;
@@ -104,12 +378,10 @@
     flex-direction: row;
     height: 100%;
     width: 100%;
-    justify-content: center;
   }
-
   .main-settings {
     background-color: white;
-    width: 60%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -121,23 +393,24 @@
     font-size: 30px;
     line-height: 35px;
     color: #094A59;
-    text-align: center;
-    margin-top: 200px;
+    margin-top: 150px;
+    margin-left: 20px;
   }
   .settings-instructions {
     font-weight: 300;
     font-size: 13px;
     width: 300px;
-    text-align: center;
+    text-align:center;
+    margin-top: 20px;
   }
 
   .settings-form {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-evenly;
     width: 100%;
-    margin-left: 50%;
+    margin-top: 10px;
   }
 
   .settings-form input {
@@ -145,8 +418,9 @@
     border: 1px solid #E5E5E5;
     box-sizing: border-box;
     border-radius: 6px;
-    width: 425px;
+    width: 280px;
     height: 45px;
+    margin-left: 0px;
     padding: 10px;
     font-weight: 300;
     font-size: 13px;
@@ -155,9 +429,9 @@
   }
 
   .settings-form label {
+    /* margin-left: 5px; */
     margin-bottom: 10px;
-    margin-top: 30px;
-    margin-left: 8px;
+    margin-top: 10px;
     font-weight: 600;
     font-size: 15px;
     line-height: 18px;
@@ -172,7 +446,7 @@
     font-size: 15px;
     font-weight: 600;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 20px;
     color: white;
     transition: .7s;
   }
