added revision changes

--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -115,6 +115,7 @@
     box-sizing: border-box;
     -moz-appearance: none;
     -webkit-appearance: none;
+    /* overflow-x: hidden; */
   }
   html {
     width: 100%;
