--- a/src/LandingPage/LogIn/login.css
+++ b/src/LandingPage/LogIn/login.css
@@ -3,10 +3,10 @@
   .login-modal {
     position: absolute;
     width: 325px;
-    height: 350px;
+    height: 400px;
     left: 50%;
     transform: translate(-50%, 0%);
-    top: 25%;
+    top: 29%;
     z-index: 100;
     background: #FFFFFF;
     box-shadow: 0px 0px 50px 
@@ -18,6 +18,7 @@
 
   .demo-creds-div { 
     margin-bottom: 50px;
+    margin-top: 35px;
   }
 
   .demo-creds {
@@ -30,7 +31,7 @@
   .login-form {
     display: flex;
     position: absolute;
-    top: 10%;
+    top: 20%;
     flex-direction: column;
     height: 350px;
     width: 325px;
