--- a/src/Forms/addform.css
+++ b/src/Forms/addform.css
@@ -1,4 +1,240 @@
-@media only screen and (max-width: 599px) {
+
+@media only screen and (min-width: 1000px) {
+  .add-form-modal {
+    position: absolute;
+    width: 500px;
+    height: 555px;
+    left: 50%;
+    transform: translate(-50%);
+    top: 25%;
+    z-index: 5;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 50px 
+      rgba(0,0,0,0.2);
+    border-radius: 7px;
+  }
+
+  .add-form-form {
+    display: flex;
+    position: absolute;
+    top: 3%;
+    flex-direction: column;
+    align-items: space-evenly;
+    justify-content: space-evenly;
+    height: 555px;
+    width: 455px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    z-index: 3;
+    padding-top: 10px;
+    margin-top: -10px;
+  }
+
+  .add-form-form input {
+    width: 375px;
+    height: 45px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    padding: 2px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+    margin-top: -15px;
+    margin-bottom: -15px;
+  }
+
+  .add-form-form textarea{
+    width: 375px;
+    height: 80px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+    padding-top: 8px;
+    margin-top: -15px;
+    margin-bottom: -15px;
+  }
+
+  .add-form-form label {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    width: 150px;
+    height: 18px;
+    position: relative;
+    left: 50px;
+    margin-top: -10px;
+    margin-bottom: -10px;
+  }
+
+  .cancel-add-form {
+    color: #69C7BF;
+    text-align: center;
+    margin-left: 50%;
+    transform: translate(-50%);
+    transition: .3s;
+    margin-bottom: -10px;
+    margin-top: -10px;
+  }
+
+  .cancel-add-form:hover {
+    cursor: pointer;
+    color: black;
+    transition: .5s;
+  }
+
+  .add-form-button {
+    width: 200px;
+    height: 50px;
+    background: #69C7BF;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 21px;
+    color: #FFFFFF;
+    transition: .5s;
+    margin-bottom: -10px;
+  }
+
+  .add-form-button:hover {
+    cursor: pointer;
+    background-color:rgb(82, 156, 150);
+    transition: 1s;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .add-form-modal {
+    position: absolute;
+    width: 500px;
+    height: 555px;
+    left: 50%;
+    transform: translate(-50%);
+    top: 25%;
+    z-index: 5;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 50px 
+      rgba(0,0,0,0.2);
+    border-radius: 7px;
+  }
+
+  .add-form-form {
+    display: flex;
+    position: absolute;
+    top: 3%;
+    flex-direction: column;
+    align-items: space-evenly;
+    justify-content: space-evenly;
+    height: 555px;
+    width: 455px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    z-index: 3;
+    padding-top: 10px;
+    margin-top: -10px;
+  }
+
+  .add-form-form input {
+    width: 375px;
+    height: 45px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    padding: 2px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+    margin-top: -15px;
+    margin-bottom: -15px;
+  }
+
+  .add-form-form textarea{
+    width: 375px;
+    height: 80px;
+    border: 1px solid #E5E5E5;
+    border-radius: 6px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #5C5D5E;
+    padding-left: 10px;
+    padding-top: 8px;
+    margin-top: -15px;
+    margin-bottom: -15px;
+  }
+
+  .add-form-form label {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    width: 150px;
+    height: 18px;
+    position: relative;
+    left: 50px;
+    margin-top: -10px;
+    margin-bottom: -10px;
+  }
+
+  .cancel-add-form {
+    color: #69C7BF;
+    text-align: center;
+    margin-left: 50%;
+    transform: translate(-50%);
+    transition: .3s;
+    margin-bottom: -10px;
+    margin-top: -10px;
+  }
+
+  .cancel-add-form:hover {
+    cursor: pointer;
+    color: black;
+    transition: .5s;
+  }
+
+  .add-form-button {
+    width: 200px;
+    height: 50px;
+    background: #69C7BF;
+    box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    margin-left: 50%;
+    transform: translate(-50%);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 21px;
+    color: #FFFFFF;
+    transition: .5s;
+    margin-bottom: -15px;
+  }
+
+  .add-form-button:hover {
+    cursor: pointer;
+    background-color:rgb(82, 156, 150);
+    transition: 1s;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
   * { 
     margin: 0px;
   }
@@ -114,11 +350,14 @@
   }
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (max-width: 599px) {
+  * { 
+    margin: 0px;
+  }
   .add-form-modal {
     position: absolute;
-    width: 500px;
-    height: 555px;
+    width: 340px;
+    height: 405px;
     left: 50%;
     transform: translate(-50%);
     top: 25%;
@@ -132,22 +371,21 @@
   .add-form-form {
     display: flex;
     position: absolute;
-    top: 3%;
+    top: 0%;
     flex-direction: column;
     align-items: space-evenly;
     justify-content: space-evenly;
-    height: 555px;
-    width: 455px;
+    height: 405px;
+    width: 350px;
     left: 50%;
     transform: translate(-50%, 0%);
-    z-index: 3;
+    z-index: 5;
     padding-top: 10px;
-    margin-top: -10px;
   }
 
   .add-form-form input {
-    width: 375px;
-    height: 45px;
+    width: 285px;
+    height: 30px;
     margin-left: 50%;
     transform: translate(-50%);
     padding: 2px;
@@ -163,8 +401,8 @@
   }
 
   .add-form-form textarea{
-    width: 375px;
-    height: 80px;
+    width: 285px;
+    height: 40px;
     border: 1px solid #E5E5E5;
     border-radius: 6px;
     margin-left: 50%;
@@ -187,8 +425,6 @@
     height: 18px;
     position: relative;
     left: 50px;
-    margin-top: -10px;
-    margin-bottom: -10px;
   }
 
   .cancel-add-form {
@@ -197,8 +433,8 @@
     margin-left: 50%;
     transform: translate(-50%);
     transition: .3s;
-    margin-bottom: -10px;
-    margin-top: -10px;
+    margin-top: 1px;
+    margin-bottom: -20px;
   }
 
   .cancel-add-form:hover {
@@ -208,20 +444,20 @@
   }
 
   .add-form-button {
-    width: 200px;
-    height: 50px;
+    width: 100px;
+    height: 30px;
     background: #69C7BF;
     box-shadow: 0px 4px 20px rgba(26, 26, 26, 0.2);
     border-radius: 50px;
     margin-left: 50%;
     transform: translate(-50%);
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
     line-height: 21px;
     color: #FFFFFF;
     transition: .5s;
-    margin-bottom: -10px;
+    margin-bottom: -25px;
   }
 
   .add-form-button:hover {
