--- a/src/Dashboards/MainDashboard/MainDashboard.css
+++ b/src/Dashboards/MainDashboard/MainDashboard.css
@@ -4,6 +4,14 @@
     height: 100%;
     background-color: rgba(229, 229, 229, 0.22);
   }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    /* overflow-x: hidden; */
+  }
 
   .main-dashboard {
 
@@ -54,6 +62,14 @@
 }
 
 @media only screen and (max-width: 1000px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    /* overflow-x: hidden; */
+  }
   body {
     width: 100%;
     height: 100%;
