--- a/src/LandingPage/LogIn/login.css
+++ b/src/LandingPage/LogIn/login.css
@@ -92,6 +92,27 @@
     transition: 1s;
   }
 
+  .login-button-small {
+    position: absolute;
+    width: 150px;
+    height: 35px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top: 5%;
+    background: #69C7BF;
+    box-shadow: 0px 4px 20px
+      rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    transition: .5s;
+  }
+
   .cancel-login {
     z-index: -1;
     position: absolute;
@@ -255,6 +276,26 @@
     background-color:rgb(82, 156, 150);
     transition: 1s;
   }
+  .login-button-small {
+    position: absolute;
+    width: 150px;
+    height: 35px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    top: 5%;
+    background: #69C7BF;
+    box-shadow: 0px 4px 20px
+      rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    transition: .5s;
+  }
 
   .cancel-login {
     z-index: -1;
@@ -264,7 +305,7 @@
     left: 50%;
     right: 50%;
     transform: translate(-50%, 0%);
-    bottom: 7.5%;
+    bottom: 8%;
     font-size: 14px;
     font-weight: 600;
     line-height: 21px;
