--- a/src/LandingPage/landingpage.css
+++ b/src/LandingPage/landingpage.css
@@ -66,6 +66,28 @@
     background-color:rgb(82, 156, 150);
     transition: 1s;
   }
+  .howtouse-button {
+    width: 200px;
+    height: 50px;
+    background: #69C7BF;
+    box-shadow: 0px 4px 20px
+      rgba(26, 26, 26, 0.2);
+    border-radius: 50px;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    transition: .5s;
+    margin-top: -30px;
+ }
+ .howtouse-button:hover {
+   cursor: pointer;
+   background-color:rgb(82, 156, 150);
+   transition: 1s;
+ }
 
   .login-button {
     z-index: 1;
@@ -86,41 +108,49 @@
   }
 }
 
-@media only screen and (min-width: 650px) {
+@media only screen and (min-width: 600px) {
   * {
     box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
     font-style: normal;
   }
+  html {
+    height: 100%;
+  }
+  body { 
+    height: 100%;
+  }
+  #root {
+    height: 100%;
+  }
+  .app {
+    height: 100%;
+  }
+  .landing-page-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    align-items: center;
+  }
 
   .hero-img {
-    position: absolute;
     width: 293px;
     height: 73px;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, 0%);
-    top: 20%;
+    margin-top: 70px;
   }
 
-  #placeholder-img {
-    position: absolute;
-    width: 235px;
-    height: 232px;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, 0%);
-    top: 38%
+  .signinbuttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100px;
+    margin-top: -30px;
+    justify-content: space-around;
   }
-
   .signup-button {
-    position: absolute;
     width: 200px;
     height: 50px;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, 0%);
-    top: 80%;
     background: #69C7BF;
     box-shadow: 0px 4px 20px
       rgba(26, 26, 26, 0.2);
@@ -140,15 +170,33 @@
     transition: 1s;
   }
 
+  .howtouse-button {
+     width: 200px;
+     height: 50px;
+     background: #69C7BF;
+     box-shadow: 0px 4px 20px
+       rgba(26, 26, 26, 0.2);
+     border-radius: 50px;
+     font-family: 'Work Sans', sans-serif;
+     font-style: normal;
+     font-weight: 600;
+     font-size: 18px;
+     line-height: 21px;
+     text-align: center;
+     color: #FFFFFF;
+     transition: .5s;
+     margin-top: -30px;
+  }
+  .howtouse-button:hover {
+    cursor: pointer;
+    background-color:rgb(82, 156, 150);
+    transition: 1s;
+  }
+
   .login-button {
     z-index: 1;
-    position: absolute;
     width: 60px;
     height: 20px;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, 0%);
-    top: 87%;
     font-size: 18px;
     font-weight: 600;
     line-height: 21px;
@@ -161,11 +209,5 @@
     cursor: pointer;
     color:rgb(82, 156, 150);
     transition: 1s;
-  }
-  .video {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    top: 35%;
   }
 }
